# filemgr

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  start.sh
deploy/: filemgr.service
src/filemgr/: __init__.py  app.py  cli.py  helper.py
src/filemgr/static/: app.css  app.js  i18n.js  index.html
src/filemgr/templates/: config.toml.example  filemgr.service
static/: app.js
